# ludex

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  ludex.yaml.example
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  artwork.py  auth.py  config.py  db.py  main.py  models.py  paths.py  settings_store.py
backend/app/routers/: agent.py  client.py  download.py  games.py  health.py  libraries.py  settings.py
backend/app/scanner/: __init__.py  classify.py  naming.py  service.py
backend/tests/: _fixtures.py  conftest.py  test_artwork.py  test_auth.py  test_client.py  test_health.py  test_library_flow.py  test_naming.py  test_scanner.py  test_settings.py
client/windows/: install.ps1  ludex-agent.ps1
ct/: ludex.sh
deploy/lxc/: README.md  create-lxc.sh  ludex-install.sh  uninstall.sh  update.sh
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  api.ts  index.css  installs.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: config.rs  install.rs  launch.rs  lib.rs  main.rs  server.rs
desktop/src/components/: GameCard.tsx  GameDetail.tsx
desktop/src/lib/: utils.ts
desktop/src/pages/: Connect.tsx  Library.tsx  Settings.tsx
docs/: DEPLOY.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: api.ts  auth.tsx  index.css  main.tsx
(+7 files in other folders)
