[package]
name = "ludex-desktop"
version = "0.1.0"
description = "Ludex desktop client"
edition = "2021"
rust-version = "1.77"

[lib]
name = "ludex_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
keyring = "2"
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = true
strip = true
